--- a/libs/existing/inc/beta/base.less
+++ b/libs/existing/inc/beta/base.less
@@ -13,7 +13,7 @@
 body.beta {
     padding-top:        0px;
     font-family:        'open_sans', sans-serif;
-    background-color:   @dap-white;
+    background-color:   @white;
 }
 
 /** Generic components/elements from site **/
@@ -26,7 +26,7 @@ body.beta {
 }
 
 .main-container {
-    background-color: @dap-white;
+    background-color: @white;
 }
 
 .main-nav {
@@ -112,7 +112,7 @@ ol li, ul li {
  */
 .status {
     padding: 10px 0 8px 0;
-    border-bottom: 1px solid @dap-gray-4;
+    border-bottom: 1px solid @gray-4;
 }
 
 .alpha-badge {
@@ -165,43 +165,43 @@ ol li, ul li {
         font-size: (@dap-font-size-base * 0.8);
     }
 
-    &.swatch--brand--heritage-blue      { background-color: #004B88; color: @dap-white; }
+    &.swatch--brand--heritage-blue      { background-color: #004B88; color: @white; }
     &.swatch--brand--heritage-yellow    { background-color: #FCBB69; }
-    &.swatch--brand--responsible-purple { background-color: #57486B; color: @dap-white; }
+    &.swatch--brand--responsible-purple { background-color: #57486B; color: @white; }
     &.swatch--brand--responsible-aqua   { background-color: #90CE9C; }
-    &.swatch--brand--inventive-teal     { background-color: #006278; color: @dap-white; }
+    &.swatch--brand--inventive-teal     { background-color: #006278; color: @white; }
     &.swatch--brand--inventive-pink     { background-color: #FBC0AD; }
-    &.swatch--brand--generous-green     { background-color: #00553F; color: @dap-white; }
+    &.swatch--brand--generous-green     { background-color: #00553F; color: @white; }
     &.swatch--brand--generous-mauve     { background-color: #B5AFD7; }
-    &.swatch--product-status--alpha     { background-color: @dap-red-brighter; color: @dap-white; }
+    &.swatch--product-status--alpha     { background-color: @dap-red-brighter; color: @white; }
     &.swatch--product-status--beta      { background-color: @beta-yellow; }
-    &.swatch--primary--text             { background-color: #00553F; color: @dap-white; }
+    &.swatch--primary--text             { background-color: #00553F; color: @white; }
     &.swatch--primary--generous-mauve   { background-color: #B5AFD7; }
-    &.swatch--extended--blue-darker         { background-color: @dap-blue-darker; color: @dap-white; }
-    &.swatch--extended--blue-lighter        { background-color: @dap-blue-corporate-light; color: @dap-black; }
-    &.swatch--extended--red                 { background-color: @dap-red; color: @dap-white; }
-    &.swatch--extended--red-heritage        { background-color: @dap-red-heritage; color: @dap-white; }
-    &.swatch--extended--red-brighter        { background-color: @dap-red-brighter; color: @dap-white; }
-    &.swatch--extended--red-mellow          { background-color: @dap-red-mellow; color: @dap-white; }
-    &.swatch--extended--purple              { background-color: @dap-purple; color: @dap-white; }
-    &.swatch--extended--mauve               { background-color: @dap-mauve; color: @dap-black; }
-    &.swatch--extended--pink                { background-color: @dap-pink; color: @dap-black; }
-    &.swatch--extended--peach               { background-color: @dap-peach; color: @dap-black; }
-    &.swatch--extended--orange              { background-color: @dap-orange; color: @dap-black; }
-    &.swatch--extended--yellow              { background-color: @dap-yellow; color: @dap-black; }
-    &.swatch--extended--green-heritage      { background-color: @dap-green-heritage; color: @dap-white; }
-    &.swatch--extended--green-blue          { background-color: @dap-green-blue; color: @dap-white; }
-    &.swatch--extended--green               { background-color: @dap-green; color: @dap-white; }
-    &.swatch--extended--turquoise           { background-color: @dap-turquoise; color: @dap-black; }
-    &.swatch--mono--black               { background-color: @dap-black; color: @dap-white; }
-    &.swatch--mono--gray1               { background-color: @dap-gray-1; color: @dap-white; }
-    &.swatch--mono--gray2               { background-color: @dap-gray-2; color: @dap-white; }
-    &.swatch--mono--gray3               { background-color: @dap-gray-3; color: @dap-black; }
-    &.swatch--mono--gray4               { background-color: @dap-gray-4; color: @dap-black; }
-    &.swatch--mono--gray5               { background-color: @dap-gray-5; color: @dap-black; }
-    &.swatch--mono--gray6               { background-color: @dap-gray-6; color: @dap-black; }
-    &.swatch--mono--gray7               { background-color: @dap-gray-7; color: @dap-black; }
-    &.swatch--mono--white               { background-color: @dap-white; color: @dap-black; }
+    &.swatch--extended--blue-darker         { background-color: @dap-blue-darker; color: @white; }
+    &.swatch--extended--blue-lighter        { background-color: @dap-blue-corporate-light; color: @black; }
+    &.swatch--extended--red                 { background-color: @dap-red; color: @white; }
+    &.swatch--extended--red-heritage        { background-color: @dap-red-heritage; color: @white; }
+    &.swatch--extended--red-brighter        { background-color: @dap-red-brighter; color: @white; }
+    &.swatch--extended--red-mellow          { background-color: @dap-red-mellow; color: @white; }
+    &.swatch--extended--purple              { background-color: @dap-purple; color: @white; }
+    &.swatch--extended--mauve               { background-color: @dap-mauve; color: @black; }
+    &.swatch--extended--pink                { background-color: @dap-pink; color: @black; }
+    &.swatch--extended--peach               { background-color: @dap-peach; color: @black; }
+    &.swatch--extended--orange              { background-color: @dap-orange; color: @black; }
+    &.swatch--extended--yellow              { background-color: @dap-yellow; color: @black; }
+    &.swatch--extended--green-heritage      { background-color: @dap-green-heritage; color: @white; }
+    &.swatch--extended--green-blue          { background-color: @dap-green-blue; color: @white; }
+    &.swatch--extended--green               { background-color: @dap-green; color: @white; }
+    &.swatch--extended--turquoise           { background-color: @dap-turquoise; color: @black; }
+    &.swatch--mono--black               { background-color: @black; color: @white; }
+    &.swatch--mono--gray1               { background-color: @gray-1; color: @white; }
+    &.swatch--mono--gray2               { background-color: @gray-2; color: @white; }
+    &.swatch--mono--gray3               { background-color: @gray-3; color: @black; }
+    &.swatch--mono--gray4               { background-color: @gray-4; color: @black; }
+    &.swatch--mono--gray5               { background-color: @gray-5; color: @black; }
+    &.swatch--mono--gray6               { background-color: @gray-6; color: @black; }
+    &.swatch--mono--gray7               { background-color: @gray-7; color: @black; }
+    &.swatch--mono--white               { background-color: @white; color: @black; }
 }
 
 
@@ -220,7 +220,7 @@ ol li, ul li {
     font-weight:    @dap-font-weight-base;
     color:          @dap-text-color;
     padding:        (@dap-line-height-computed * 0.6) (@dap-line-height-computed * 1.5);
-    background-color:   @dap-white;
+    background-color:   @white;
     display: block;
     margin:         (@dap-line-height-computed * 0.6) 0;
 }
@@ -230,9 +230,9 @@ blockquote {
   padding: 10px 20px;
   margin: 0 0 20px;
   font-size: 17.5px;
-  border-left: 5px solid @dap-gray-4;
+  border-left: 5px solid @gray-4;
 
   p.lighten {
-    color: @dap-gray-3;
+    color: @gray-3;
   }
 }
