--- a/libs/existing/inc/beta/boxes.less
+++ b/libs/existing/inc/beta/boxes.less
@@ -1,11 +1,11 @@
 .beta-box() {
-    background-color: @gray-6-and-a-bit;
+    background-color: @gray-6-5;
     border-top-width: 4px;
 
     & > h2 {
         margin: 0 0 0.7em;
         font-size: 1.2em;
-        color: @dap-heritage-blue;
+        color: @heritage-blue;
     }
 
     & > h3 {
@@ -18,7 +18,7 @@
 
 .content__header {
     margin-top: -1em;
-    background: @dap-gray-5;
+    background: @gray-5;
 
     @media (max-width: @screen-xs-max ) {
         margin-top: 0; // No breadcrumb trail
@@ -59,7 +59,7 @@
 }
 
 .beta-index-page__box {
-    border-bottom: 1px solid @dap-gray-5;
+    border-bottom: 1px solid @gray-5;
     margin-bottom: @dap-paragraph-margin-bottom;
     float: left;
 
@@ -93,7 +93,7 @@
 }
 
 .box--blue {
-    border-top-color: @dap-heritage-blue;
+    border-top-color: @heritage-blue;
 }
 
 .main-content__sidebar {
