--- a/libs/existing/inc/beta/breadcrumb.less
+++ b/libs/existing/inc/beta/breadcrumb.less
@@ -7,7 +7,7 @@
 
 .main-breadcrumb {
     // Hack as we have Bootstrap in the mix
-    background-color: @dap-gray-5;
+    background-color: @gray-5;
     padding: 0;
     margin-top: 0;
     max-width: none;
