--- a/libs/existing/inc/beta/cover.less
+++ b/libs/existing/inc/beta/cover.less
@@ -16,8 +16,8 @@
 }
 
 h1 {
-    color: @dap-heritage-blue;
+    color: @heritage-blue;
 }
 h2, p, a {
-    color: @dap-gray-1;
+    color: @gray-1;
 }
