--- a/libs/existing/inc/beta/extent-switcher.less
+++ b/libs/existing/inc/beta/extent-switcher.less
@@ -12,7 +12,7 @@
 	
 	h2.beta-extent-switcher__heading {
 		font-size:      @dap-font-size-heading-5;
-		color:          @dap-heading-primary-color;
+		color:          @heading-primary-color;
 	}
 	
 	.custom-dropdown__select {
