--- a/libs/existing/inc/beta/panels.less
+++ b/libs/existing/inc/beta/panels.less
@@ -37,7 +37,7 @@
  */
 
 .dap-panel--base {
-    background-color: @dap-white;
+    background-color: @white;
     border: 1px solid @beta-blue-light;
 
     h2 {
@@ -70,11 +70,11 @@
  */
 
 .dap-panel--important {
-    background-color: lighten(@dap-heritage-blue, 70%);
-    border: 1px solid @dap-heritage-blue;
+    background-color: lighten(@heritage-blue, 70%);
+    border: 1px solid @heritage-blue;
 
     h2 {
-        color: @dap-heritage-blue;
+        color: @heritage-blue;
     }
 
     h3 {
@@ -91,7 +91,7 @@
     border-left: 4px solid @beta-aqua;
 
     h2 {
-        color: @dap-heritage-blue;
+        color: @heritage-blue;
     }
 
     h3 {
@@ -108,7 +108,7 @@
     border-left: 4px solid @beta-yellow;
 
     h2 {
-        color: @dap-heritage-blue;
+        color: @heritage-blue;
     }
 
     h3 {
@@ -122,11 +122,11 @@
  */
 
 .dap-panel--example {
-    background-color: @dap-white;
-    border-left: 4px solid @dap-gray-4;
+    background-color: @white;
+    border-left: 4px solid @gray-4;
 
     .h2 {
-        color: @dap-gray-2;
+        color: @gray-2;
     }
 
     .h3 {
@@ -140,12 +140,12 @@
 
 // Primary sidebar panel
 .dap-panel--side__blue {
-    background-color: lighten(@dap-gray-4, 15%);
-    border-top: 4px solid @dap-heritage-blue;
+    background-color: lighten(@gray-4, 15%);
+    border-top: 4px solid @heritage-blue;
 
     .h2 {
 	  font-size: @dap-font-size-medium;
-      color: @dap-heritage-blue;
+      color: @heritage-blue;
     }
 
     .h3 {
@@ -160,12 +160,12 @@
 }
 // Advisory sidebar panel
 .dap-panel--side__yellow {
-    background-color: lighten(@dap-gray-4, 15%);
+    background-color: lighten(@gray-4, 15%);
     border-top: 4px solid @beta-yellow;
 
     .h2 {
 	  font-size: @dap-font-size-medium;
-      color: @dap-heritage-blue;
+      color: @heritage-blue;
     }
 
     .h3 {
@@ -180,12 +180,12 @@
 }
 // Additional sidebar help panel
 .dap-panel--side__aqua {
-    background-color: lighten(@dap-gray-4, 15%);
+    background-color: lighten(@gray-4, 15%);
     border-top: 4px solid @beta-aqua;
 
     .h2 {
 	  font-size: @dap-font-size-medium;
-      color: @dap-heritage-blue;
+      color: @heritage-blue;
     }
 
     .h3 {
