--- a/libs/existing/inc/beta/sidebar-navigation.less
+++ b/libs/existing/inc/beta/sidebar-navigation.less
@@ -13,7 +13,7 @@
     }
     
     ul {
-        //background-color: @dap-white;
+        //background-color: @white;
         color: @dap-text-color;
         list-style: none;
         padding: 0;
@@ -30,7 +30,7 @@
     li.current {
         //font-size: @dap-font-size-small;
         font-weight: @dap-font-weight-bold;
-        background-color: @beta-blue-light-tint;
+        background-color: @beta-blue-lighter;
         padding: 0.4em 0.6em 0.6em 0.6em;
         margin: 0;
         border-bottom: 0.1em solid @beta-blue-light;
@@ -40,9 +40,9 @@
         //font-size: @dap-font-size-small;
         font-weight: @dap-font-weight-bold;
         background-color: @beta-blue-light;
-        color: @dap-heritage-blue;
+        color: @heritage-blue;
         margin: 0;
-        border-bottom: 0.1em solid @dap-white;
+        border-bottom: 0.1em solid @white;
         
         .side-nav__group-title {
             display: block;
@@ -59,12 +59,12 @@
         
         &.-current {
             font-weight: @dap-font-weight-bold;
-            background-color: @beta-blue-light-tint;
+            background-color: @beta-blue-lighter;
             border-bottom: 0.1em solid @beta-blue-light;
         }
         
         &:hover {
-            background-color: @dap-gray-6;
+            background-color: @gray-6;
         }
     }
 }
