--- a/libs/existing/inc/beta/status.less
+++ b/libs/existing/inc/beta/status.less
@@ -8,7 +8,7 @@
 .status {
     padding: 1.5em 1em 0.5em 1em;
     background-color: @beta-yellow-light;
-    color: @dap-gray-1;
+    color: @gray-1;
     vertical-align: middle;
     margin: 0;
 
@@ -16,14 +16,14 @@
 .alpha-badge {
     font-weight: 700;
     background-color: @beta-yellow;
-    color: @dap-gray-1;
+    color: @gray-1;
     display: inline-block;
     float: left;
     padding: 0.5em;
     margin-right: 0.5em;
 }
 .breadcrumb {
-    background-color: @dap-white;
+    background-color: @white;
     p {
         font-size: 0.9em;
     }
