--- a/libs/existing/inc/global.less
+++ b/libs/existing/inc/global.less
@@ -289,8 +289,8 @@ iframe {
 hr {
     margin: 1em 0;
     height: 1px;
-    color: @dap-gray-4;
-    background: @dap-gray-4;
+    color: @gray-4;
+    background: @gray-4;
     border: 0;
 }
 
