--- a/libs/existing/inc/beta/sidebar-navigation-accordion.less
+++ b/libs/existing/inc/beta/sidebar-navigation-accordion.less
@@ -6,15 +6,15 @@
  */
 
 #beta-dap-menu-accordion {
-    color: @dap-white;
+    color: @white;
 
     .js & ul ul {
         display: none;
     }
 
     ul > li.-active > ul {
-        background-color: @dap-heritage-blue;
-        color: @dap-white;
+        background-color: @heritage-blue;
+        color: @white;
     }
 
     ul > li.-open > ul {
@@ -61,9 +61,9 @@
         font-size: 0.875em;
         font-weight: @dap-font-weight-bolder;
         text-decoration: none;
-        color: @dap-heritage-blue;
+        color: @heritage-blue;
         background: @beta-blue-light;
-        border-bottom: 1px solid @dap-white;
+        border-bottom: 1px solid @white;
         -webkit-transition: color .2s ease;
         -o-transition: color .2s ease;
         transition: color .2s ease;
@@ -118,8 +118,8 @@
     }
 
     #beta-dap-menu-accordion .beta-dap-menu-accordion__section.has-sub.-active > .beta-dap-menu-accordion__link {
-        background-color: @dap-heritage-blue;
-        color: @dap-white;
+        background-color: @heritage-blue;
+        color: @white;
     }
 
     #beta-dap-menu-accordion .beta-dap-menu-accordion__section.has-sub.-open > .beta-dap-menu-accordion__link {
@@ -135,14 +135,14 @@
     font-size: 0.875em;
     line-height: 1.5em;
     text-decoration: none;
-    color: @dap-heritage-blue;
-    border-bottom: 1px solid @dap-gray-5;
+    color: @heritage-blue;
+    border-bottom: 1px solid @gray-5;
     -webkit-transition: color .2s ease;
     -o-transition: color .2s ease;
     transition: color .2s ease;
 
     &:hover {
         color: @dap-blue-darker;
-        background-color: @dap-gray-5;
+        background-color: @gray-5;
     }
 }
