Prep for user-nav branch
- Renamed site-2 to site-new
- Renamed user-nav-cleanup.html to cleanup.html

--- a/public/css/site-new.css
+++ b/public/css/site-new.css
@@ -10133,4 +10133,4 @@ li > ol {
   color: #253460;
   font-size: 75%;
 }
-/*# sourceMappingURL=site-2.css.map */
+/*# sourceMappingURL=site-new.css.map */
